--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "expo": "~47.0.6",
     "expo-status-bar": "~1.4.2",
+    "newsapi": "^2.4.1",
+    "querystring": "^0.2.1",
     "react": "18.1.0",
     "react-native": "0.70.5"
   },
